# TadPole

./: .gitattributes  .gitignore  Dockerfile  Pipfile  README.md  bayes_optimization.py  build.ps1  build.sh  custom_logger.py  eval_only.py  evaluation.py  evaluation_log.txt  evaluation_mamciej.py  evaluation_test.py  fasttext_exec.py  fasttext_train.py  glove_train.py  model_train_tests.py  new_evaluation_test.py  parse_test.ipynb  phrog_parser.py  prot_config.json  pyvenv.cfg  requirements.txt  tadpole_config.json  train_info.md  utils.py  word2vec_train.py
.github/workflows/: pytest.yaml
Data/: metadata-phrog.tsv  metadata_02-04-2023.pickle  metadata_filtered.pickle  metadata_filtered_noncoded.pickle  metadata_lookup_phrog_exchanged.pickle  metadata_phrog.dill  metadata_phrog_coded.pickle  metadata_phrog_encoded.pickle
evaluation/: ft_virall_coded_02-04_ns-075_lr0005_lrmin00001_d150_w2_e500_hs0_neg75_maxn3_minn6_summary.json  virall_coded_02-04_ns-01_lr0005_lrmin00001_d150_w2_e10_hs0_neg75_mincount5_summary.json  virall_coded_02-04_ns-01_lr0005_lrmin00001_d150_w2_e500_hs0_neg75_mincount5_summary.json  virall_coded_02-04_speedruncheck_ns-01_lr0005_lrmin00001_d150_w2_e10_hs0_neg75_mincount5_summary.json
parsers/poteznyparser/: Cargo.toml  rundbg
parsers/poteznyparser/src/: lib.rs  main.rs
results/: result.pickle  result.txt  vir2000_collapsed.pickle  vir2000_collapsed.txt  vir2000_numbered.pickle  vir2000_numbered.txt  vir2000_simple.pickle  vir2000_simple.txt
scripts/: README.md  make_subset.py
train_test/: test.model  test.wordvectors
(+27 files in other folders)
